syntax = "proto3";

package TestService;
option go_package = "micro-service/TestService;TestService";

// 订单请求参数
message OrderRequest2 {
    string orderId = 1;
    int64 timeStamp = 2;
}
// 订单信息
message OrderInfo2 {
    string OrderId = 1;
    string OrderName = 2;
    string OrderStatus = 3;
}
// 订单服务service定义
service Order2Service {
    rpc GetOrderInfo(OrderRequest2) returns (OrderInfo2);
}